Header overlap fixes

--- a/front-end/src/Profile.css
+++ b/front-end/src/Profile.css
@@ -4,6 +4,7 @@
 }
 
 #profile-picture {
+    margin-top: 3em;
   border-radius: 50%;
   height: 100px;
   width: 100px;
